# wallet-pass

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs  pass.rs  sign.rs  template.rs
