[package]
name = "wallet-pass"
version = "0.1.0"
edition = "2018"
authors = ["Lars Westermann <lars-westermann@live.de>"]

description = "Build and sign passes for apple wallet"
keywords = ["apple wallet", "wallet", "signpass"]
categories = ["encoding", "command-line-interface"]

license = "MIT"

repository = "https://github.com/pixix4/ev3dev-lang-rust"
readme = "README.md"


[dependencies]
clap = "3.0.0-beta.2"
fs_extra = "1.2"
tempfile = "3.2"
walkdir = "2.3"
zip = { version = "0.5", features = ["deflate"] }
openssl = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
