[package]
name = "wallet-pass"
version = "0.2.2"
edition = "2018"
authors = ["Lars Westermann <lars-westermann@live.de>"]

description = "Build and sign passes for apple wallet"
keywords = ["apple", "pass", "wallet", "signpass"]
categories = ["encoding", "command-line-interface"]

license = "MIT"

repository = "https://github.com/pixix4/wallet-pass"
readme = "README.md"

[dependencies]
fs_extra = "1.2"
tempfile = "3.3"
walkdir = "2.3"
zip = { version = "0.5", features = ["deflate"] }
openssl = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = {version = "3.0", features = ["derive"], optional = true }

[features]
cli = ["clap"]

[[bin]]
name = "signpass"
required-features = ["cli"]
