[package]
name = "wallet-pass"
version = "0.5.0"
edition = "2018"
authors = ["Lars Westermann <lars-westermann@live.de>"]

description = "Build and sign passes for apple wallet"
keywords = ["apple", "pass", "wallet", "signpass"]
categories = ["encoding", "command-line-interface"]

license = "MIT"

repository = "https://github.com/pixix4/wallet-pass"
readme = "README.md"

[dependencies]
fs_extra = "1.3.0"
tempfile = "3.8.0"
walkdir = "2.4.0"
zip = { version = "0.6.6", features = ["deflate"] }
openssl = "0.10.57"
hex = "0.4.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

clap = {version = "3.2.25", features = ["derive"], optional = true }

[features]
cli = ["clap"]

[[bin]]
name = "signpass"
required-features = ["cli"]
